# Ivory-Runtime

./: .gitignore  .gitmodules  CMakeLists.txt  Ivory.sln  README.md  copySourceToLinux.ps1  dGarble.sln  debug.mak  makefile  release.mak
SPDZ/: CopeOtExtDefines.h  CopeOtExtReceiver.cpp  CopeOtExtReceiver.h  CopeOtExtSender.cpp  CopeOtExtSender.h  SPDZ.vcxproj  SPDZ.vcxproj.filters
SPDZ/Math/: ZpField.cpp  ZpField.h
dGarble/: dGarble.vcxproj  dGarble.vcxproj.filters
dGarble/Circuit/: Circuit.cpp  Circuit.h  CircuitStream.cpp  CircuitStream.h  DagCircuit.cpp  DagCircuit.h  Gate.h
dGarble/Common/: ArrayView.h  BitIterator.h  BitVector.cpp  BitVector.h  ByteStream.cpp  ByteStream.h  Defines.cpp  Defines.h  Exceptions.h  Log.cpp  Log.h  Timer.cpp  Timer.h  mpsc_queue.h
dGarble/Crypto/: AES.cpp  AES.h  Commit.h  PRF.h  PRNG.cpp  PRNG.h  sha1.h
dGarble/GarbledCircuit/: ClassicGarbledCircuit.cpp  ClassicGarbledCircuit.h  GarbledCircuit.h  HalfGtGarbledCircuit.cpp  HalfGtGarbledCircuit.h  KProbeResistant.cpp  (+1 more)
dGarbleTestVS/: AES_TestsVS.cpp  BaseOT_TestsVS.cpp  BtChannel_TestsVS.cpp  Circuit_Tests_VS.cpp  ClassicGarbledCircuit_Tests_VS.cpp  HalfGtGarbledCircuit_Tests_VS.cpp  OT_TestsVS.cpp  dGarbleTestVS.vcxproj  dGarbleTestVS.vcxproj.filters  stdafx.cpp
dGarbleTests/: AES_Tests.cpp  AES_Tests.h  BaseOT_Tests.cpp  BtChannel_Tests.cpp  BtChannel_Tests.h  Circuit_Tests.cpp  Circuit_Tests.h  Common.cpp  Common.h  DebugCircuits.h  HalfGtGarbledCircuit_Tests.cpp  HalfGtGarbledCircuit_Tests.h  KProbe_Tests.cpp  OTOracleReceiver.cpp  OTOracleReceiver.h  OTOracleSender.cpp  OTOracleSender.h  OT_Tests.cpp  OT_Tests.h  dGarbleTests.vcxproj  dGarbleTests.vcxproj.filters
frontend/: GcInterface.cpp  frontend.args.json  frontend.vcxproj  main.cpp
ivory/: CMakeLists.txt  ivory.vcxproj  ivory.vcxproj.filters
ivory/Circuit/: AlphaCircuit.cpp  AlphaCircuit.h  AlphaLibrary.cpp  AlphaLibrary.h  BetaCircuit.cpp  BetaCircuit.h  BetaLibrary.cpp  BetaLibrary.h  Circuit.cpp  Circuit.h  CircuitLibrary.cpp  CircuitLibrary.h  CircuitStream.cpp  CircuitStream.h  DagCircuit.cpp  DagCircuit.h  Gate.h  SequentialCircuit.cpp  SequentialCircuit.h
ivory/Circuit/Parser/: VerilogParser.cpp  VerilogParser.h  VerilogTokenizer.cpp  VerilogTokenizer.h
ivory/Common/: ArrayView.h  BitVector.cpp  Defines.h  Log.cpp
ivory/Crypto/: Curve.cpp  Curve.h  PRNG.cpp
ivory/GarbledCircuit/: ClassicGarbledCircuit.cpp  ClassicGarbledCircuit.h  GarbledCircuit.h  HalfGtGarbledCircuit.cpp  HalfGtGarbledCircuit.h  KProbeResistant.cpp  KProbeResistant.h
ivory/Network/: BtAcceptor.cpp  BtChannel.cpp  BtChannel.h  BtEndpoint.cpp  BtEndpoint.h  BtIOService.cpp  BtIOService.h  BtSocket.h  Channel.h
ivory/OT/Base/: naor-pinkas.cpp
ivory/OT/NChooseOne/: KkrtNcoOtSender.cpp
ivory/OT/NChooseOne/Oos/: OosNcoOtSender.cpp
ivory/OT/Tools/: BchCode.cpp
ivory/OT/TwoChooseOne/: IknpOtExtReceiver.cpp  IknpOtExtSender.cpp  KosOtExtReceiver.cpp  KosOtExtSender.cpp
ivory/Runtime/: BetaCircuit.cpp  BetaCircuit.h  ClearRuntime.cpp  ClearRuntime.h  CrtInput.cpp  CrtInput.h  CrtInt.cpp  CrtInt.h  CrtRuntime.cpp  CrtRuntime.h  GcInterface.h  MpcRuntime.cpp  MpcRuntime.h  Party.cpp  Party.h  Runtime.cpp  Runtime.h  ShGcRuntime.cpp  ShGcRuntime.h  sInt.cpp  sInt.h
ivory/Runtime/Clear/: ClearInt.cpp  ClearInt.h  ClearRuntime.cpp  ClearRuntime.h
ivory/Runtime/Public/: PublicInt.cpp  PublicInt.h
ivory/Runtime/ShGc/: OfflineSocket.cpp  OfflineSocket.h  ShGcInt.cpp  ShGcInt.h  ShGcRuntime.cpp  ShGcRuntime.h  utils.h
ivory/Runtime/Thunder/: ThunderInt.cpp  ThunderInt.h  ThunderRuntime.cpp  ThunderRuntime.h  util.h
ivoryTestVS/: AES_TestsVS.cpp  BetaCircuit_Tests_VS.cpp  BtChannel_TestsVS.cpp  Circuit_Tests_VS.cpp  Cope_TestsVS.cpp  KProbe_Tests_VS.cpp  OT_TestsVS.cpp  ShGcRuntime_TestsVs.cpp  ZpNumber_TestVS.cpp  ivoryTestVS.vcxproj  ivoryTestVS.vcxproj.filters  ~AutoRecover.ivoryTestVS.vcxproj
ivoryTests/: AES_Tests.cpp  BaseOT_Tests.cpp  BetaCircuit_Tests.cpp  BetaCircuit_Tests.h  BtChannel_Tests.cpp  CMakeLists.txt  Circuit_Tests.cpp  Circuit_Tests.h  Common.cpp  Common.h  Cope_Tests.cpp  Cope_Tests.h  DebugCircuits.cpp  DebugCircuits.h  HalfGtGarbledCircuit_Tests.cpp  HalfGtGarbledCircuit_Tests.h  KProbe_Tests.cpp  KProbe_Tests.h  OTOracleReceiver.cpp  OTOracleReceiver.h  OTOracleSender.cpp  OTOracleSender.h  OT_Tests.cpp  OT_Tests.h  ShGcRuntime_tests.cpp  ShGcRuntime_tests.h  ZpNumber_Tests.cpp  ZpNumber_Tests.h  ivoryTests.vcxproj  ivoryTests.vcxproj.filters  ~AutoRecover.ivoryTests.vcxproj
(+27 files in other folders)
